# conduit

./: .codecov.yml  .gitignore  .golangci-warnings.yml  .golangci.yml  .goreleaser.yaml  CODEOWNERS  Dockerfile  Makefile  README.md  circle.yml  go.mod  go.sum  go_mod_tidier.go
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs-pr.yml  goreleaser.yml  reviewdog.yml  tests.yml
api/: api.go  api_test.go
cmd/conduit/: main.go  main_test.go
cmd/conduit-docs/: main.go
cmd/readme_config_includer/: generator.go
conduit/: config.go  errors.go  hooks.go  init_provider.go
conduit/data/: block_export_data.go  config.go  config_test.go
conduit/loggers/: loggers.go  loggers_test.go
conduit/metrics/: metrics.go
conduit/pipeline/: common.go  (+10 more)
docker/: docker-entrypoint.sh
docs/: Configuration.md  Development.md  Docker.md  ExternalPlugins.md  GettingStarted.md  PluginDevelopment.md  Third_Party_Plugins.md
e2e_tests/: pyproject.toml
e2e_tests/src/conduit_e2e_tests.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
e2e_tests/src/e2e_common/: indexer_db.py
e2e_tests/src/e2e_conduit/: e2econduit.py  runner.py  subslurp.py
e2e_tests/src/e2e_conduit/fixtures/exporters/: file_exporter.py  postgresql.py
e2e_tests/src/e2e_conduit/fixtures/importers/: follower_algod.py
e2e_tests/src/e2e_conduit/scenarios/: __init__.py  follower_indexer_scenario.py
e2e_tests/src/indexer_e2e_tests.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
version/: strings.go
(+95 files in other folders)
